--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
@@ -44,7 +44,11 @@
                             </p:column>
                             <p:column headerText="#{msg.sub_subcanal}" filterBy="#{seg.segmentId.subChannelId.nameSubChannel}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.segmentId.subChannelId.nameSubChannel}"/>
-                            </p:column>                            
+                            </p:column>   
+                            <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">                                       
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSubSegment eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSubSegment eq '1'}"/>
+                            </p:column>
                             <p:column exportable="false">
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalleSub(seg)}" 
                                                style="color: blue" process="@this" update="@form"/>
