--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -167,7 +167,7 @@
 
                                         <h:outputLabel value="#{msg.out_distributor_old}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
                                         <p:inputText readonly="true" value="#{outletConsultarBean.showDistributorName(outletConsultarBean.distributorOld)}"/>
-                                        
+
                                         <h:outputLabel value="#{msg.out_distributor_new}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu value="#{outletConsultarBean.db3PartyIdNew}" style="width: 90%" converter="db3PartyConverter"
                                                          disabled="#{outletConsultarBean.disabledDb3PartyNew}">
@@ -188,6 +188,11 @@
                                         <h:panelGroup>
                                             <b><h:outputLabel value="#{outletConsultarBean.nameTmc}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/></b>
                                         </h:panelGroup>
+
+                                        <h:outputLabel value="#{msg.agreement}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
+                                        <p:selectBooleanCheckbox value="#{outletConsultarBean.agreement}" disabled="#{outletConsultarBean.disableAgreement}">
+                                            <p:ajax process="@this" update="formConsultarOutlet:pgSegment"/>
+                                        </p:selectBooleanCheckbox>
                                     </h:panelGrid>
                                     <br/>
                                     <!--h:panelGrid columns="6" style="width: 80%">
@@ -206,35 +211,35 @@
                                     <h:panelGrid columns="4" style="width: 95%">
                                         <h:outputLabel value="#{msg.can_canal}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu value="#{outletConsultarBean.channelSelected}" converter="channelConverter" style="width: 90%"
-                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation}">
+                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation or outletConsultarBean.agreement}">
                                             <f:selectItems value="#{outletConsultarBean.listChannel}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                             <p:ajax update="formConsultarOutlet:pgSegment" process="@this" listener="#{outletConsultarBean.listenerChannel()}"/>
                                         </p:selectOneMenu>
 
                                         <h:outputLabel value="#{msg.sub_subcanal}" style="width: 100%;padding: 10px" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu value="#{outletConsultarBean.subChannelSelected}" converter="subChannelConverter" style="width: 90%"
-                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation}">
+                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation or outletConsultarBean.agreement}">
                                             <f:selectItems value="#{outletConsultarBean.listSubChannel}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                             <p:ajax update="formConsultarOutlet:pgSegment" process="@this" listener="#{outletConsultarBean.listenerSubChannel()}"/>
                                         </p:selectOneMenu>
 
                                         <h:outputLabel value="#{msg.seg_segmento}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu converter="segmentoConverter" value="#{outletConsultarBean.segmentSelected}" style="width: 90%"
-                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation}">
+                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation or outletConsultarBean.agreement}">
                                             <f:selectItems value="#{outletConsultarBean.listSegment}" var="seg" itemLabel="#{seg.nameSegment}"/>
                                             <p:ajax update="formConsultarOutlet:pgSegment" process="@this" listener="#{outletConsultarBean.listenerSegment()}"/>
                                         </p:selectOneMenu>
 
                                         <h:outputLabel value="#{msg.sub_seg_subsegmento}" style="width: 100%;padding: 10px" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu value="#{outletConsultarBean.subSegmentSelected}" converter="subSegmentoConverter" style="width: 90%"
-                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation}">
+                                                         disabled="#{outletConsultarBean.disabledFuntionalSegmentation or outletConsultarBean.agreement}">
                                             <f:selectItems value="#{outletConsultarBean.listSubSegment}" var="subseg" itemLabel="#{subseg.nameSubsegment}"/>
                                             <p:ajax update="formConsultarOutlet:pgSegment formConsultarOutlet:somPotential" process="@this" listener="#{outletConsultarBean.listenerSubSegment()}"/>
                                         </p:selectOneMenu>
 
                                         <h:outputLabel value="#{msg.out_potencial}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu id="somPotential" converter="potentialConverter" value="#{outletConsultarBean.potentialSelected}"
-                                                         disabled="#{outletConsultarBean.disabledPotentialSegmentation}"  style="width: 90%">
+                                                         disabled="#{outletConsultarBean.disabledPotentialSegmentation or outletConsultarBean.agreement}"  style="width: 90%">
                                             <f:selectItems value="#{outletConsultarBean.listPotential}" var="pot" itemLabel="#{pot.namePotential}"/>
                                         </p:selectOneMenu>
 
@@ -264,7 +269,7 @@
                             </p:fieldset>
                             <br/>
                             <p:fieldset legend="#{msg.out_distributor_segmentation}" style="width: 95%">
-                                <h:panelGroup id="pgSegmentDistributor">
+                                <h:panelGroup id="pgSegmentDistributor">                                    
                                     <h:panelGrid columns="4" style="width: 95%">
                                         <h:outputLabel value="#{msg.can_canal}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
                                         <p:inputText readonly="true" value="#{outletConsultarBean.subSegmentDistributor.segmentId.subChannelId.channelId.nameChannel}"/>
